Added fisrt serial port classes + mdtAlgorithms namespace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,7 @@ ADD_DEFINITIONS( "-Wall -ansi -lm" )
 
 # Support de Qt4
 SET(QT_USE_QTTEST TRUE)
+set(QT_USE_QTSQL TRUE)
 FIND_PACKAGE(Qt4 REQUIRED)
 INCLUDE(${QT_USE_FILE})
 ADD_DEFINITIONS(${QT_DEFINITIONS})
